--- a/src/ims/UI/Login.form
+++ b/src/ims/UI/Login.form
@@ -107,6 +107,9 @@
       <AccessibilityProperties>
         <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="btnLogin"/>
       </AccessibilityProperties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnLoginActionPerformed"/>
+      </Events>
     </Component>
     <Component class="java.awt.Label" name="lblHeading">
       <Properties>
