--- a/src/ims/UI/PizzaOrder.form
+++ b/src/ims/UI/PizzaOrder.form
@@ -166,6 +166,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Place Order"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnOrderActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="lblPizzaSize">
       <Properties>
